testsuite/tests/typing-objects-bugs/pr4435_bad.compilers.reference
File "pr4435_bad.ml", line 14, characters 6-7:
Error: Multiple definition of the type name c.
       Names must be unique in a given structure or signature.
